--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@marsidev/react-turnstile": "^0.2.4",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-progress": "^1.1.0",
@@ -27,6 +28,7 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.15",
     "postcss": "^8.4.24",
+    "prisma": "^5.21.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
@@ -37,7 +39,9 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.16",
     "autoprefixer": "^10.4.14",
+    "dotenv-cli": "^7.4.2",
     "postcss": "^8.4.24",
+    "prisma": "^4.x.x",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6"
   }
